src/objects/Hotel_Room__c.object
<CustomObject>
    <description>Holds the information related to a Hotel Booking.</description>
    <fields>
        <fullName>Average_Room_Rate_Without_Taxes_and_Fees__c</fullName>
        <label>Average Room Rate Without Taxes and Fees</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Avg_Cost_Rate__c</fullName>
        <label>Avg Cost Rate</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Avg_Price_Rate__c</fullName>
        <label>Avg Price Rate</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BAR_Rate__c</fullName>
        <label>BAR Rate</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Billed_Through_Date__c</fullName>
        <description>The date that this hotel room has been billed through</description>
        <label>Billed Through Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Billing_Complete__c</fullName>
        <formula>IF( CheckOut__c =  Billed_Through_Date__c, &apos;TRUE&apos;,&apos;FALSE&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Billing Complete</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Booking_Status__c</fullName>
        <label>Booking Status</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRS_Room_Rate_Price__c</fullName>
        <label>CRS Room Rate Price</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CRS_Room_Rate__c</fullName>
        <formula>(((IF(ISPICKVAL( Parking_Fee_Type__c , &quot;Daily&quot;), Parking_Fee_Amount__c, 0)) *  Itemized_Tax__c )   +  ((IF(ISPICKVAL( Pet_Fee_Type__c , &quot;Daily&quot;), Pet_Fee_Amount__c, 0)) *  Itemized_Tax__c )   +  ((IF(ISPICKVAL( Other_Fee_Type__c , &quot;Daily&quot;), Other_Fee_Amount__c, 0))  *  Itemized_Tax__c )  + (IF(ISPICKVAL( Parking_Fee_Type__c , &quot;Daily&quot;), Parking_Fee_Amount__c, 0))  +  (IF(ISPICKVAL( Pet_Fee_Type__c , &quot;Daily&quot;), Pet_Fee_Amount__c, 0)) + (IF(ISPICKVAL( Other_Fee_Type__c , &quot;Daily&quot;), Other_Fee_Amount__c, 0))) + (Hotel_Nightly_Rate__c * Itemized_Tax__c ) + Hotel_Nightly_Rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The quote basis plus daily fees.</inlineHelpText>
        <label>CRS Room Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cancellation_del__c</fullName>
        <label>Cancellation #</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CheckOut__c</fullName>
        <label>Check-Out Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Check_In__c</fullName>
        <label>Check-In Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Confirmation__c</fullName>
        <label>Confirmation #</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_Date__c</fullName>
        <formula>CreatedDate</formula>
        <label>Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Estimated_Check_Out_Date__c</fullName>
        <description>The current estimated check-out date</description>
        <label>Estimated Check-Out Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Estimated_Checkout_Date_MM_DD__c</fullName>
        <formula>TEXT(MONTH(Estimated_Check_Out_Date__c)) &amp; &quot;/&quot; &amp; TEXT(DAY(Estimated_Check_Out_Date__c))</formula>
        <label>Estimated Checkout Date MM/DD</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hotel_Discount_Used__c</fullName>
        <label>Hotel Discount Used</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CAT Rate</fullName>
                </value>
                <value>
                    <fullName>Customer Discounted Rate</fullName>
                </value>
                <value>
                    <fullName>Negotiated Discount Rate</fullName>
                </value>
                <value>
                    <fullName>Walk In Rate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hotel_Nightly_Rate__c</fullName>
        <description>The night rate not including tax.</description>
        <inlineHelpText>The hotel nightly rate not including tax.</inlineHelpText>
        <label>Hotel Nightly Rate</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>IATA_Collected__c</fullName>
        <defaultValue>0</defaultValue>
        <label>IATA Collected</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>IATA_Expected__c</fullName>
        <formula>(Average_Room_Rate_Without_Taxes_and_Fees__c * Nights_In_Room__c) * 0.10</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IATA Expected</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Itemized_Tax__c</fullName>
        <inlineHelpText>Enter the hotel&apos;s tax rate percent.</inlineHelpText>
        <label>Itemized Tax Percentage</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Kitchen_Features__c</fullName>
        <label>Kitchen Features</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Full Kitchen</fullName>
                </value>
                <value>
                    <fullName>Kitchenette</fullName>
                </value>
                <value>
                    <fullName>Microwave/Refrigerator</fullName>
                </value>
                <value>
                    <fullName>Microwave Only</fullName>
                </value>
                <value>
                    <fullName>No Cooking Facilities</fullName>
                </value>
                <value>
                    <fullName>Refrigerator Only</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Migration_PTID__c</fullName>
        <label>Migration_PTID</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Nights_In_Room__c</fullName>
        <description>Calculate the number of nights stayed</description>
        <formula>IF(LEN(TEXT(CheckOut__c)) &gt;0 , CheckOut__c - Check_In__c , Estimated_Check_Out_Date__c - Check_In__c)</formula>
        <label>Est. Nights</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Extensions__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Number of Extensions</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>One_Time_Fees_Taxable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>One-Time Fees Taxable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>One_Time_Other_Fees_Taxable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>One Time Other Fees Taxable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>One_Time_Parking_Fees_Taxable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>One Time Parking Fees Taxable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>One_Time_Pet_Fees_Taxable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>One Time Pet Fees Taxable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Original_Check_In_Date__c</fullName>
        <label>Original Check-In Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Original_Check_Out_Date__c</fullName>
        <label>Original Check-Out Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Original_Estimated_Check_Out_Date__c</fullName>
        <label>Original Estimated Check-Out Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Other_Fee_Amount__c</fullName>
        <label>Other Fee Amount</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Other_Fee_Description__c</fullName>
        <label>Other Fee Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Other_Fee_Type__c</fullName>
        <label>Other Fee Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Other_Fee_cb__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Daily</fullName>
                </value>
                <value>
                    <fullName>One-time</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Other_Fee_cb__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Other Fee</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Parking_Fee_Amount__c</fullName>
        <label>Parking Fee Amount</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Parking_Fee_Type__c</fullName>
        <label>Parking Fee Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Parking_Fee_cb__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Daily</fullName>
                </value>
                <value>
                    <fullName>One-time</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Parking_Fee_cb__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Parking Fee</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Payment_Status__c</fullName>
        <label>Payment Status</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pet_Fee_Amount__c</fullName>
        <label>Pet Fee Amount</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Pet_Fee_Type__c</fullName>
        <label>Pet Fee Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Pet_Fee_cb__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Daily</fullName>
                </value>
                <value>
                    <fullName>One-time</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pet_Fee_cb__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pet Fee</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Placement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Placement</label>
        <referenceTo>Placement__c</referenceTo>
        <relationshipLabel>Hotel Rooms</relationshipLabel>
        <relationshipName>Hotel_Rooms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Policyholder_Mobile_Number__c</fullName>
        <formula>Placement__r.Opportunity__r.Policyholder__r.MobilePhone</formula>
        <label>Policyholder Text To Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Policyholder__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Policyholder</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Hotel Rooms</relationshipLabel>
        <relationshipName>Hotel_Rooms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Previous_Estimated_Check_Out_Date__c</fullName>
        <label>Previous Estimated Check-Out Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RC_Last_Modified_By_Id__c</fullName>
        <label>RC Last Modified By Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RC_Last_Modified_By__c</fullName>
        <label>RC Last Modified By</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Room_Number__c</fullName>
        <description>The actual hotel room number</description>
        <label>Room Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Room_Type__c</fullName>
        <label>Room Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>One Bedroom Suite</fullName>
                </value>
                <value>
                    <fullName>Pet Boarding</fullName>
                </value>
                <value>
                    <fullName>Standard Double</fullName>
                </value>
                <value>
                    <fullName>Standard King</fullName>
                </value>
                <value>
                    <fullName>Standard Queen</fullName>
                </value>
                <value>
                    <fullName>Studio Suite</fullName>
                </value>
                <value>
                    <fullName>Three Bedroom Suite</fullName>
                </value>
                <value>
                    <fullName>Two Bedroom Suite</fullName>
                </value>
                <value>
                    <fullName>Vacation Rental</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Send_Text_Email_Notifications__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Send Text/Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Service_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Request</label>
        <referenceTo>ServiceRequest__c</referenceTo>
        <relationshipName>Hotels</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Total_Credit_Needed__c</fullName>
        <formula>Avg_Cost_Rate__c * (Estimated_Check_Out_Date__c - Check_In__c) +  Total_One_Time_Fees__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Credit Needed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_One_Time_Fees__c</fullName>
        <formula>IF(ISPICKVAL(Pet_Fee_Type__c, &apos;Daily&apos;) &amp;&amp; ISPICKVAL(Parking_Fee_Type__c, &apos;Daily&apos;) &amp;&amp; ISPICKVAL(Other_Fee_Type__c, &apos;Daily&apos;),Pet_Fee_Amount__c + Parking_Fee_Amount__c + Other_Fee_Amount__c,
IF(ISPICKVAL(Pet_Fee_Type__c, &apos;Daily&apos;) &amp;&amp; ISPICKVAL(Parking_Fee_Type__c, &apos;Daily&apos;) &amp;&amp;  NOT(ISPICKVAL(Other_Fee_Type__c, &apos;Daily&apos;)),Pet_Fee_Amount__c + Parking_Fee_Amount__c,
IF(ISPICKVAL(Pet_Fee_Type__c, &apos;Daily&apos;) &amp;&amp; NOT(ISPICKVAL(Parking_Fee_Type__c, &apos;Daily&apos;)) &amp;&amp;  ISPICKVAL(Other_Fee_Type__c, &apos;Daily&apos;),Pet_Fee_Amount__c + Other_Fee_Amount__c,
IF(NOT(ISPICKVAL(Pet_Fee_Type__c, &apos;Daily&apos;)) &amp;&amp; ISPICKVAL(Parking_Fee_Type__c, &apos;Daily&apos;) &amp;&amp;  ISPICKVAL(Other_Fee_Type__c, &apos;Daily&apos;),Parking_Fee_Amount__c + Other_Fee_Amount__c,
IF(ISPICKVAL(Pet_Fee_Type__c, &apos;Daily&apos;) &amp;&amp; NOT(ISPICKVAL(Parking_Fee_Type__c, &apos;Daily&apos;)) &amp;&amp;  NOT(ISPICKVAL(Other_Fee_Type__c, &apos;Daily&apos;)),Pet_Fee_Amount__c,
IF(NOT(ISPICKVAL(Pet_Fee_Type__c, &apos;Daily&apos;)) &amp;&amp; ISPICKVAL(Parking_Fee_Type__c, &apos;Daily&apos;) &amp;&amp;  NOT(ISPICKVAL(Other_Fee_Type__c, &apos;Daily&apos;)),Parking_Fee_Amount__c,
IF(NOT(ISPICKVAL(Pet_Fee_Type__c, &apos;Daily&apos;)) &amp;&amp; NOT(ISPICKVAL(Parking_Fee_Type__c, &apos;Daily&apos;)) &amp;&amp;  ISPICKVAL(Other_Fee_Type__c, &apos;Daily&apos;),Other_Fee_Amount__c,0)))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total One Time Fees</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Unbilled__c</fullName>
        <label>Total Unbilled</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Hotel Room</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Room-{00000}</displayFormat>
        <label>Hotel Room</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Hotel Rooms</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>